# mlir-wheels

./: .cmake-format.yaml  README.md  build_local.sh  config.cmake  demonv.py  docker_prepare.sh  docker_prepare_ccache.sh  install_cuda.sh  install_vulkan.sh  pyproject.toml  setup.py  setup_action.yml
.github/actions/setup_base/: action.yml
.github/actions/setup_ccache/: action.yml
.github/workflows/: build_arm64.yml  clean_releases.yml  distro.yml  docker.yml  nv.yml  wasm.yml  wheels.yml
actions/setup_base/: action.yml
actions/setup_ccache/: action.yml
binary_dist/: MANIFEST.in  pyproject.toml  setup.py
docker/: Dockerfile  Dockerfile.ubuntu.18
native_tools/: setup.py
patches/: add_td_to_mlirpythoncapi_headers.patch  async_llvm_dylib.patch  cl_opt_name.patch  export_async_symbols.patch  glibc.patch  html.patch  mac_vec.patch  mscv.patch  namespaces.patch  opaqueptrs.patch  openmp.patch  pyproject.patch  register_test_pass.patch  remove_openmp_dep_on_clang_and_export_async_symbols.patch  set_successor.patch  tblgen.patch  wasm_mlir_opt.patch
python_bindings/: CMakeLists.txt  MANIFEST.in  build-requirements.txt  pyproject.toml  requirements.txt  setup.py
pywasm/: build.sh  pyproject.toml  version.py
scripts/: apply_patches.sh  build_local.sh  build_wasm.sh  docker_prepare_ccache.sh  gh_releases.py  install_cuda.sh  install_vulkan.sh  patch_openmp.sh  pip_install_mlir.sh  symbols.py
