[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.12",
    "pybind11[global]>=2.10.4",
    "numpy",
    "dataclasses",
    "mlir-native-tools",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build-verbosity = 3
build = "cp311-*"
skip = ["*-manylinux_i686", "*-musllinux*"]

[tool.cibuildwheel.linux]
environment = { PATH = "/usr/lib/ccache:/usr/lib64/ccache:/usr/lib/ccache/bin:$PATH", PIP_FIND_LINKS = "https://makslevental.github.io/wheels" }
before-build = [
    "{project}/scripts/docker_prepare_ccache.sh",
    "{project}/scripts/install_cuda.sh",
    "{project}/scripts/install_vulkan.sh",
    "{project}/scripts/apply_patches.sh",
]
before-test = "ccache --show-stats"
environment-pass = [
    "BUILD_CUDA",
    "BUILD_OPENMP",
    "BUILD_VULKAN",
    "CIBW_ARCHS",
    "HOST_CCACHE_DIR",
    "LLVM_PROJECT_COMMIT",
    "LLVM_DATETIME",
    "LLVM_PROJECT_MAIN_SRC_DIR",
    "MATRIX_OS",
    "PARALLEL_LEVEL",
    "CMAKE_GENERATOR",
    "CMAKE_ARGS",
    "APPLY_PATCHES",
    "PIP_FIND_LINKS",
    "PIP_NO_BUILD_ISOLATION",
]
repair-wheel-command = [
    "auditwheel repair -w {dest_dir} {wheel} --exclude libcuda.so.1 --exclude libvulkan.so.1 --exclude libomp.so --exclude libompd.so"
]

[tool.cibuildwheel.macos]
environment = { PATH = "/opt/homebrew/opt/ccache/libexec:$PATH", PIP_FIND_LINKS = "https://makslevental.github.io/wheels" }
before-build = [
    "{project}/scripts/install_vulkan.sh",
    "{project}/scripts/apply_patches.sh",
]
repair-wheel-command = [
    "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel} --ignore-missing-dependencies"
]

[tool.cibuildwheel.windows]
environment = { PIP_FIND_LINKS = "https://makslevental.github.io/wheels" }
before-build = [
    "pip install delvewheel",
    "bash {project}\\scripts\\install_vulkan.sh",
    "bash {project}\\scripts\\apply_patches.sh",
]
#repair-wheel-command = 'delvewheel repair {dest_dir} {wheel}'

#[tool.cibuildwheel.windows.environment]
#PATH = "/usr/lib/ccache:$HOME/.cargo/bin:$PATH"
#archs = ["AMD64", "ARM64"]
#before-all = "choco install ccache"
#before-test = "ccache --show-stats"