[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.12",
    "pybind11[global]>=2.10.4",
    "numpy",
    "dataclasses",
    "PyYAML",
    "nanobind",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build-verbosity = 3
build = "cp310-*"
skip = ["*-manylinux_i686", "*-musllinux*"]
manylinux-aarch64-image = "manylinux_2_28"
manylinux-x86_64-image = "sameli/manylinux_2_28_x86_64_cuda_12.3"

[tool.cibuildwheel.linux]
environment = { PATH = "/usr/lib/ccache:/usr/lib64/ccache:/usr/lib/ccache/bin:$PATH", PIP_FIND_LINKS = "https://github.com/makslevental/mlir-wheels/releases/expanded_assets/latest" }
before-build = [
    "{project}/scripts/docker_prepare_ccache.sh",
#    "{project}/scripts/install_cuda.sh",
    "{project}/scripts/install_vulkan.sh",
    "{project}/scripts/apply_patches.sh",
]
before-test = "ccache --show-stats"
environment-pass = [
    "APPLY_PATCHES",
    "BUILD_CUDA",
    "BUILD_AMDGPU",
    "BUILD_OPENMP",
    "BUILD_VULKAN",
    "CIBW_ARCHS",
    "CMAKE_ARGS",
    "CMAKE_GENERATOR",
    "DATETIME",
    "DEBUG_CI_FAST_BUILD",
    "HOST_CCACHE_DIR",
    "LLVM_PROJECT_COMMIT",
    "MATRIX_OS",
    "MLIR_LIT_PYTHONPATH",
    "PARALLEL_LEVEL",
    "PIP_FIND_LINKS",
    "PIP_NO_BUILD_ISOLATION",
    "RUN_TESTS",
    "USE_CMAKE_NAMESPACES",
]
repair-wheel-command = [
    "auditwheel repair -w {dest_dir} {wheel} --exclude libcuda.so.1 --exclude libvulkan.so.1 --exclude libomp.so --exclude libompd.so"
]

[tool.cibuildwheel.macos]
environment = { PATH = "/usr/local/opt/ccache/libexec:$PATH", PIP_FIND_LINKS = "https://github.com/makslevental/mlir-wheels/releases/expanded_assets/latest" }
before-build = [
    "{project}/scripts/install_vulkan.sh",
    "{project}/scripts/apply_patches.sh",
]
repair-wheel-command = [
    "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel} --ignore-missing-dependencies"
]

[tool.cibuildwheel.windows]
environment = { PIP_FIND_LINKS = "https://github.com/makslevental/mlir-wheels/releases/expanded_assets/latest" }
before-build = [
    "pip install delvewheel",
    "bash {project}\\scripts\\install_vulkan.sh",
    "bash {project}\\scripts\\apply_patches.sh",
]
