# Part of the LLVM Project, under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
# Copyright (c) 2025.

[project]
name = "mlir-python-bindings"
dynamic = ["version"]
requires-python = ">=3.8,<=3.13"

[project.urls]
Homepage = "https://github.com/llvm/llvm-project"
Discussions = "https://discourse.llvm.org/"
"Issue Tracker" = "https://github.com/llvm/llvm-project/issues?q=is%3Aissue%20state%3Aopen%20label%3Amlir%3Apython%20"
"Source Code" = "https://github.com/llvm/llvm-project/tree/main/mlir/python"

[build-system]
requires = [
    "scikit-build-core==0.10.7",
    "typing_extensions==4.12.2",
    "nanobind>=2.4, <3.0",
    "numpy>=1.19.5, <=2.1.2",
    "pybind11>=2.10.0, <=2.13.6",
    "PyYAML>=5.4.0, <=6.0.1",
    'ml_dtypes>=0.1.0, <=0.6.0; python_version<"3.13"',
    'ml_dtypes>=0.5.0, <=0.6.0; python_version>="3.13"'
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# all of this stupid shit just for a dynamic version...
experimental = true
metadata.version.provider = "version"
metadata.version.provider-path = "."
minimum-version = "0.10"
build-dir = "../build"
cmake.source-dir = "../llvm-project/llvm"
wheel.exclude = ["bin", "include", "lib", "src", "share"]
build.targets = ["MLIRPythonModules"]
install.components = ["MLIRPythonModules"]

[tool.scikit-build.cmake.define]
CMAKE_C_COMPILER_LAUNCHER = { env = "CMAKE_C_COMPILER_LAUNCHER", default = "" }
CMAKE_CXX_COMPILER_LAUNCHER = { env = "CMAKE_CXX_COMPILER_LAUNCHER", default = "" }
CMAKE_CXX_VISIBILITY_PRESET = "hidden"
CMAKE_VERBOSE_MAKEFILE = "ON"
LLVM_ENABLE_PROJECTS = "mlir"
MLIR_ENABLE_BINDINGS_PYTHON = "ON"
MLIR_BINDINGS_PYTHON_INSTALL_PREFIX = "mlir"
LLVM_NATIVE_TOOL_DIR = { env = "LLVM_NATIVE_TOOL_DIR", default = "" }
LLVM_TABLEGEN = { env = "LLVM_TABLEGEN", default = "" }
MLIR_TABLEGEN = { env = "MLIR_TABLEGEN", default = "" }
MLIR_LINALG_ODS_YAML_GEN = { env = "MLIR_LINALG_ODS_YAML_GEN", default = "" }
LLVM_DISTRIBUTIONS = "MlirDevelopment"
LLVM_MlirDevelopment_DISTRIBUTION_COMPONENTS = "MLIRPythonModules"
